[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/World/Viridian City/floor_tiles.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/World/Pallet Town/objects.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/World/Viridian City/wall_tiles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/npc.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/World/Viridian City/Mall.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=7]

[node name="Mall" type="Node2D"]
script = ExtResource( 6 )

[node name="floor" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 65536, 20, 65536, 65537, 20, 65536, 65538, 20, 0, 65539, 20, 0, 65540, 20, 0, 65541, 20, 0, 65542, 20, 65536, 65543, 20, 65536, 65544, 20, 65536, 65545, 20, 65536, 65546, 20, 65536, 65547, 20, 0, 65548, 20, 65536, 196607, 20, 65536, 131072, 20, 65536, 131073, 20, 65536, 131074, 20, 65536, 131075, 20, 65536, 131076, 20, 65536, 131077, 20, 65536, 131078, 20, 65536, 131079, 20, 65536, 131080, 20, 65536, 131081, 20, 65536, 131082, 20, 65536, 131083, 20, 65536, 131084, 20, 65536, 262143, 20, 65536, 196608, 20, 65536, 196609, 20, 65536, 196610, 20, 65536, 196611, 20, 65536, 196612, 20, 65536, 196613, 20, 65536, 196614, 20, 65536, 196615, 20, 65536, 196616, 20, 65536, 196617, 20, 65536, 196618, 20, 65536, 196619, 20, 65536, 196620, 20, 65536, 327679, 20, 65536, 262144, 20, 65536, 262145, 20, 65536, 262146, 20, 65536, 262147, 20, 65536, 262148, 20, 65536, 262149, 20, 65536, 262150, 20, 65536, 262151, 20, 65536, 262152, 20, 65536, 262153, 20, 65536, 262154, 20, 65536, 262155, 20, 65536, 262156, 20, 65536, 393215, 20, 65536, 327680, 20, 65536, 327681, 20, 65536, 327682, 20, 65536, 327683, 20, 65536, 327684, 20, 65536, 327685, 20, 65536, 327686, 20, 65536, 327687, 20, 65536, 327688, 20, 65536, 327689, 20, 65536, 327690, 20, 65536, 327691, 20, 65536, 327692, 20, 65536, 458751, 20, 65536, 393216, 20, 65536, 393217, 20, 65536, 393218, 20, 65536, 393219, 20, 65536, 393220, 20, 65536, 393221, 20, 65536, 393222, 20, 65536, 393223, 20, 65536, 393224, 20, 65536, 393225, 20, 65536, 393226, 20, 65536, 393227, 20, 65536, 393228, 20, 65536, 524287, 20, 65536, 458752, 20, 65536, 458753, 20, 65536, 458754, 20, 65536, 458755, 20, 65536, 458756, 20, 65536, 458757, 20, 65536, 458758, 20, 65536, 458759, 20, 65536, 458760, 20, 65536, 458761, 20, 65536, 458762, 20, 65536, 458763, 20, 65536, 458764, 20, 65536, 589823, 20, 65536, 524288, 20, 65536, 524289, 20, 65536, 524290, 20, 65536, 524291, 20, 65536, 524292, 20, 65536, 524293, 20, 65536, 524294, 20, 65536, 524295, 20, 65536, 524296, 20, 65536, 524297, 20, 65536, 524298, 20, 65536, 524299, 20, 65536, 524300, 20, 65536, 655359, 20, 65536, 589824, 20, 65536, 589825, 20, 65536, 589826, 20, 65536, 589827, 20, 65536, 589828, 20, 65536, 589829, 20, 65536, 589830, 20, 65536, 589831, 20, 65536, 589832, 20, 65536, 589833, 20, 65536, 589834, 20, 65536, 589835, 20, 65536, 589836, 20, 65536 )

[node name="Wall" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( -1, 3, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65527, 4, 0, -65526, 4, 0, -65525, 4, 0, -65524, 2, 0, 65535, 3, 65536, 0, 4, 65536, 1, 4, 65536, 2, 4, 65536, 3, 4, 65536, 4, 4, 65536, 5, 4, 65536, 6, 4, 65536, 7, 4, 65536, 8, 4, 65536, 9, 4, 65536, 10, 4, 65536, 11, 4, 65536, 12, 2, 65536, 131071, 3, 131072, 65536, 4, 131072, 65537, 4, 131072, 65538, 4, 131072, 65539, 4, 131072, 65540, 4, 131072, 65541, 4, 131072, 65542, 4, 131072, 65543, 4, 131072, 65544, 4, 131072, 65545, 4, 131072, 65546, 4, 131072, 65547, 4, 131072, 65548, 2, 131072, 196607, 3, 196608 )

[node name="Inside objects" parent="." instance=ExtResource( 2 )]
scale = Vector2( 4, 4 )
collision_layer = 2
collision_mask = 2
tile_data = PoolIntArray( -65535, 27, 0, -65534, 27, 1, -65532, 24, 0, -65531, 24, 1, -65530, 24, 1, -65529, 24, 1, 65535, 22, 0, 0, 22, 1, 1, 27, 65536, 2, 27, 65537, 4, 24, 65536, 5, 24, 65537, 6, 24, 65537, 7, 24, 65537, 8, 40, 0, 9, 40, 1, 10, 40, 2, 11, 40, 3, 131071, 22, 65536, 65536, 22, 65537, 65539, 26, 0, 65544, 40, 65536, 65545, 40, 65537, 65546, 40, 65538, 65547, 40, 65539, 196607, 22, 131072, 131072, 22, 131073, 131075, 26, 65536, 131080, 40, 131072, 131081, 40, 131073, 131082, 40, 131074, 131083, 40, 131075, 262143, 30, 0, 196608, 30, 1, 196611, 26, 131072, 327679, 30, 65536, 262144, 30, 65537, 262147, 26, 196608, 262151, 35, 0, 262152, 58, 0, 262153, 58, 1, 262155, 35, 0, 327680, 33, 0, 327681, 33, 1, 327682, 33, 2, 327683, 33, 3, 327687, 35, 131072, 327688, 58, 65536, 327689, 58, 65537, 327691, 35, 131072, 393216, 33, 65536, 393217, 33, 65537, 393218, 33, 65538, 393219, 33, 65539, 393223, 35, 65536, 393224, 58, 131072, 393225, 58, 131073, 393227, 35, 65536, 458752, 25, 0, 458753, 25, 1, 458754, 25, 2, 458759, 35, 196608, 458760, 58, 196608, 458761, 58, 196609, 458763, 35, 196608, 524288, 25, 65536, 524289, 25, 65537, 524290, 25, 65538, 589824, 25, 131072, 589825, 25, 131073, 589826, 25, 131074 )

[node name="NPC" parent="." instance=ExtResource( 5 )]
position = Vector2( 481.9, 112.11 )
scale = Vector2( 3, 3 )
character = 10
number_of_character_in_dialogue = "Mart 4"
regular_character = true

[node name="NPC2" parent="." instance=ExtResource( 5 )]
position = Vector2( 751.004, 192.629 )
scale = Vector2( 3, 3 )
character = 10
number_of_character_in_dialogue = "Mart 5"
regular_character = true

[node name="NPC3" parent="." instance=ExtResource( 5 )]
position = Vector2( 104.466, 444.061 )
scale = Vector2( 3, 3 )
character = 10
number_of_character_in_dialogue = "Mart 1"
regular_character = true

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( 394, 543.082 )

[node name="Door" parent="." instance=ExtResource( 7 )]
position = Vector2( 390.922, 637.646 )
[connection signal="body_entered" from="player" to="." method="_on_player_body_entered"]
